--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kalkulator walut</title>
+    <link rel="icon" href="img/ccicon.png" />
     <meta property="og:image" content="img/currency-converter.png" />
     <link
       rel="stylesheet"
